fix the bug made by stack overflow

--- a/public/css/home_page/home.css
+++ b/public/css/home_page/home.css
@@ -1,3 +1,168 @@
+#tinderslide {
+  position: relative;
+  background: #fff;
+  width: 90vw;
+  height: 70vh;
+  max-width: 600px;
+  margin: 0 auto;
+}
+#tinderslide ul {
+  margin: 0;
+  position: relative;
+  display: block;
+  height: 100%;
+  display: block;
+}
+#tinderslide ul > li {
+  display: block;
+  position: absolute;
+  overflow: hidden;
+  top: 0;
+  z-index: 2;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  padding: 10px 10px 10px 10px;
+  background: #eee;
+  font-size: 24px;
+  color: #000;
+  border: 1px solid #fff;
+  border: 1px solid #dfdfdf;
+  border: 1px solid rgba(96, 96, 96, 0.2);
+  transform: translate3d(0%, 0, 0) scale3d(1, 1, 1);
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+}
+#tinderslide ul > li .userName {
+  position: absolute;
+  bottom: 5px;
+  color: #000;
+}
+#tinderslide ul > li img {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+#tinderslide .noUser {
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%);
+  font-size: 20px;
+  width: 100%;
+  text-align: center;
+}
+#tinderslide .noUser.is-active {
+  display: block;
+}
+
+/* Image text */
+#tinderslide li h2 {
+  color: #fff;
+  font-size: 30px;
+  text-align: center;
+  position: absolute;
+  top: 40%;
+  left: 0;
+  width: 100%;
+  text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.2);
+}
+
+/* Image rotation */
+#tinderslide li.pane1 {
+  transform: rotate(-1deg);
+}
+
+#tinderslide li.pane2 {
+  transform: rotate(2deg);
+}
+
+/* Like & dislike badge images */
+#tinderslide .like,
+#tinderslide .dislike {
+  background: url("/images/liked.png") no-repeat scroll 0 0;
+  opacity: 0;
+  height: 80px;
+  position: absolute;
+  width: 170px;
+  left: 45px;
+  top: 20px;
+  z-index: 1;
+  overflow: hidden;
+  transform: translate3d(0%, 0, 0) scale3d(1, 1, 1);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+#tinderslide .dislike {
+  right: 45px;
+  left: auto;
+  background: url("/images/nope.png") no-repeat scroll 0 0;
+}
+
+/* Image container */
+#tinderslide .img {
+  height: 90%;
+  width: 100%;
+  margin-bottom: 5px;
+  position: relative;
+  transform: translate3d(0%, 0, 0) scale3d(1, 1, 1);
+  overflow: hidden;
+  backface-visibility: hidden;
+  transform-style: preserve-3d;
+  -webkit-backface-visibility: hidden;
+  -webkit-transform: translate3d(0, 0, 0) scale3d(1, 1, 1);
+  -webkit-transform-style: preserve-3d;
+}
+
+/* Action - buttons */
+.actions {
+  display: flex;
+  justify-content: space-between;
+  width: 200px;
+  margin: 15px auto;
+}
+.actions.is-none {
+  display: none;
+}
+
+.actions div {
+  position: relative;
+  display: inline-block;
+  margin-right: -4px;
+}
+
+.actions a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f7f7f7;
+  background-image: -o-linear-gradient(top, #f7f7f7, #e7e7e7);
+  width: 80px;
+  height: 80px;
+  position: relative;
+  text-align: center;
+  line-height: 144px;
+  border-radius: 50%;
+  outline: none;
+  box-shadow: 0px 3px 8px #aaa, inset 0px 2px 3px #fff;
+}
+.actions a.dislike {
+  color: #eb5f5f;
+}
+.actions a.like {
+  color: #e07474;
+}
+
+.actions a:hover {
+  text-decoration: none;
+  color: #555;
+  background: #f5f5f5;
+}
+
 .homePage .nav > ul > li.appIcon > a > img {
   width: 100%;
   align-items: center;
@@ -16,16 +181,6 @@
   height: 400px;
   object-fit: cover;
 }
-.homePage .nav {
-  display: flex;
-  align-items: center;
-  width: 90%;
-  margin: 0 auto;
-  padding: 15px 0;
-}
-.homePage .logo {
-  margin: 0 auto;
-}
 .homePage .logo img {
   width: 45px;
 }
@@ -41,6 +196,36 @@
 }
 .homePage span a{
  text-decoration: none;
+}
+.homePage .card-body {
+  height: 3.7rem; 
+}
+.homePage .card-body img {
+  width: 2.3rem;
+  height: 2.3rem;
+}
+.homePage .card-body i {
+  font-size: 30px;
+  color: #f3920b;
+}
+.homePage .card-body {
+  height: 600px; 
+  overflow-y: auto;
+  background: #fff;
+}
+.homePage .card-body .card-title {
+  border-left: solid 6px #f3920b;
+}
+
+.homePage .nav {
+  display: flex;
+  align-items: center;
+  width: 90%;
+  margin: 0 auto;
+  padding: 15px 0;
+}
+.homePage .logo {
+  margin: 0 auto;
 }
 .homePage .searchIcon i {
   font-size: 25px;
@@ -113,7 +298,7 @@
     padding: 10px;
     border-radius: 90px;
     transition: opacity 0.5s;
-		text-align: center;
+    text-align: center;
   }
 .search_home .searchBtn_wrap {
 	text-align: center;
